--- a/Spelunk.Web/packages.config
+++ b/Spelunk.Web/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.1.1" targetFramework="net45" />
-  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
   <package id="bootstrap" version="2.3.1" targetFramework="net45" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0-beta2" targetFramework="net45" />
@@ -10,5 +9,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="refit" version="1.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
