--- a/Spelunk.Web/Spelunk.Web.csproj
+++ b/Spelunk.Web/Spelunk.Web.csproj
@@ -45,6 +45,9 @@
       <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Refit">
       <HintPath>..\packages\refit.1.0.0\lib\Net45\Refit.dll</HintPath>
     </Reference>
