--- a/Spelunk.Web/packages.config
+++ b/Spelunk.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="refit" version="1.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
